[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewokssphinx"
version = "0.2.0"
keywords = ['ewoks', 'sphinx']
authors = [{ name = "ESRF", email = "dau-pydev@esrf.fr" }]
description = "Ewoks Sphinx directives"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Sphinx :: Extension",
]
requires-python = ">=3.9"
dependencies = ["sphinx", "ewokscore >= 1.3.0"]

[project.urls]
Homepage = "https://gitlab.esrf.fr/workflow/ewoks/ewokssphinx/"
Documentation = "https://gitlab.esrf.fr/workflow/ewoks/ewokssphinx/-/blob/main/README.md"
Repository = "https://gitlab.esrf.fr/workflow/ewoks/ewokssphinx/"
Issues = "https://gitlab.esrf.fr/workflow/ewoks/ewokssphinx/issues"
Changelog = "https://gitlab.esrf.fr/workflow/ewoks/ewokssphinx/-/blob/main/CHANGELOG.md"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ['*/tests/*']

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = ["pytest >=7", "ruff>=0.11.3"]
