[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewokssphinx"
version = "2.2.1"
keywords = ['ewoks', 'sphinx']
authors = [{ name = "ESRF", email = "dau-pydev@esrf.fr" }]
description = "Ewoks Sphinx directives"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Sphinx :: Extension",
]
requires-python = ">=3.10"
dependencies = [
    "sphinx",
    "ewokscore >=3.1.0",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/ewoks-kit/ewokssphinx/"
Documentation = "https://github.com/ewoks-kit/ewokssphinx/blob/main/README.md"
Repository = "https://github.com/ewoks-kit/ewokssphinx/"
Issues = "https://github.com/ewoks-kit/ewokssphinx/issues"
Changelog = "https://github.com/ewoks-kit/ewokssphinx/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest >=7",
]
dev = [
    "ewokssphinx[test]",
    "ruff",
]
doc = [
    "ewokssphinx[test]",
    "myst-parser",
    "pydata_sphinx_theme",
    "sphinx-design",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ewokssphinx = ["*.css"]

[tool.coverage.run]
omit = ['*/tests/*']

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore `S101` (assert used violations) in all test files
"src/ewokssphinx/tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true
